--- a/mobile.css
+++ b/mobile.css
@@ -1,4 +1,7 @@
 @media (max-width:900px) {
+  .text{
+    padding-top: 15px ;
+  }
   h1{
     font-size: 25px;
   }
@@ -17,7 +20,7 @@
   }
 
   #choices{
-    margin-top: 30px;
+    margin-top: 20px;
   }
 }
 
